--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "url": "https://github.com/fkhadra/react-contexify/issues"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.8",
-    "@types/enzyme": "^3.9.4",
+    "@types/classnames": "^2.2.9",
+    "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
     "@types/prop-types": "^15.7.1",
-    "@types/react": "^16.8.22",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
-    "autoprefixer": "^9.6.0",
-    "coveralls": "^3.0.4",
+    "autoprefixer": "^9.6.1",
+    "coveralls": "^3.0.5",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
@@ -58,7 +58,7 @@
     "jest-cli": "^24.8.0",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.17",
-    "postcss-cli": "^6.1.2",
+    "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "raf": "^3.4.1",
     "react": "^16.4.2",
@@ -70,9 +70,9 @@
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5",
+    "typescript": "^3.5.3",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "peerDependencies": {
@@ -80,6 +80,7 @@
     "react-dom": ">=16.8.6"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   }
