--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-contexify",
-  "version": "4.1.1",
+  "name": "@ishikawa_masashi/react-contexify",
+  "version": "1.0.4",
   "main": "lib/index.js",
   "typings": "./lib/index.d.ts",
   "description": "Add contextmenu to your react component with ease",
@@ -29,33 +29,35 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fkhadra/react-contexify.git"
+    "url": "git+https://github.com/IshikawaMasashi/react-contexify.git"
   },
-  "author": "Fadi Khadra <fdkhadra@gmail.com> (https://github.com/fkhadra)",
+  "author": "Ishikawa Masashi <ishikawa_masashi@hotmail.com> (https://github.com/IshikawaMasashi)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fkhadra/react-contexify/issues"
+    "url": "https://github.com/IshikawaMasashi/issues"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
     "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.15",
+    "@types/jest": "^24.0.18",
     "@types/prop-types": "^15.7.1",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "autoprefixer": "^9.6.1",
-    "coveralls": "^3.0.5",
+    "coveralls": "^3.0.6",
     "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "cssnano-cli": "^1.0.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
+    "enzyme-to-json": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.17",
     "postcss-cli": "^6.1.3",
@@ -63,25 +65,23 @@
     "raf": "^3.4.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-test-renderer": "^16.8.6",
-    "regenerator-runtime": "^0.13.2",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "react-test-renderer": "^16.9.0",
+    "regenerator-runtime": "^0.13.3",
+    "rimraf": "^3.0.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.0.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6"
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.0",
-    "@material-ui/icons": "^4.2.1",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   }
